--- a/templates/skill.html
+++ b/templates/skill.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{candidate.skills}}</title>
+    <title>{{skill_name}}</title>
 </head>
 <body>
     <h1>Найдено кандидатов со скиллом {{ skill_name }}: {{candidates_len}}</h1>
